# json-obfuscator

./: Makefile  README.md  example2.json  example_obfuscated.json  lib.hpp  main  main.cpp  utils.hpp
include/: json_encoder.hpp  string_encoder.hpp
maps/: replacement_map_utf-16.txt  replacement_map_utf-32.txt  replacement_map_utf-8.txt
src/: CMakeLists.txt  json_encoder.cpp  main.cpp  string_encoder.cpp  tests.cpp
